--- a/speech.html
+++ b/speech.html
@@ -36,7 +36,7 @@
         };
 
         let lastDirection = '';  // To store the last direction
-        const socket = new WebSocket('ws://192.168.1.110/ws'); // Replace with your Arduino's WebSocket URL
+        const socket = new WebSocket('ws://192.168.1.110/80'); // Replace with your Arduino's WebSocket URL
 
         socket.onopen = function(event) {
             console.log('Connected to WebSocket server.');
